<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f3f3f3"
    android:layout_height="match_parent"
    tools:context=".AnnetSalgActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="322dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/salagre">

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textView66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/navn"
                app:layout_constraintEnd_toStartOf="@+id/sakundenavn"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider12" />

            <EditText
                android:id="@+id/sakundenavn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/space"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView66"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/textView67"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dato"
                app:layout_constraintEnd_toStartOf="@+id/sadato"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView66" />

            <EditText
                android:id="@+id/sadato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView67"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/textView68"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pris"
                app:layout_constraintEnd_toStartOf="@+id/sapris"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView67" />

            <EditText
                android:id="@+id/sapris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/space"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView68"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <View
                android:id="@+id/divider13"
                android:layout_width="395dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView70" />

            <Spinner
                android:id="@+id/sabetalingsmetode"
                android:layout_width="211dp"
                android:layout_height="51dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView70"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/betaling"
                app:layout_constraintEnd_toStartOf="@+id/sabetalingsmetode"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView68" />

            <Button
                android:id="@+id/salagre"
                android:layout_width="301dp"
                android:layout_height="62dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:background="#ffbb00"
                android:text="@string/lagre"
                android:onClick="SAlagre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider13" />

            <View
                android:id="@+id/divider11"
                android:layout_width="1dp"
                android:layout_height="219dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/divider12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.659"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.96" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/antall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.882"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/annet_salg"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/bifolk"
                app:layout_constraintEnd_toStartOf="@+id/divider11"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView61" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/voks"
                app:layout_constraintEnd_toStartOf="@+id/divider11"
                app:layout_constraintHorizontal_bias="0.086"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView62" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pollenering"
                app:layout_constraintEnd_toStartOf="@+id/divider11"
                app:layout_constraintHorizontal_bias="0.094"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView63" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dronninger"
                app:layout_constraintEnd_toStartOf="@+id/divider11"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView64" />

            <EditText
                android:id="@+id/antbifolk"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:hint="@string/space"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView62"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <EditText
                android:id="@+id/antvoks"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:hint="@string/space"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView63"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <EditText
                android:id="@+id/antpollenering"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/space"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView64"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <EditText
                android:id="@+id/antdronninger"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:hint="@string/space"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView65"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"/>

            <View
                android:id="@+id/divider12"
                android:layout_width="395dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView65" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>